<resources>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="full_wday_day_month_no_year">EEEE, d MMMM</string>
    <string name="sview_cover_wday_month_day_no_year">E, MMMM d</string>
    <string name="sview_cover_wday_day_month_no_year">E, d MMMM</string>
    <string name="sview_cover_dual_wday_month_day_no_year">E, MMM d</string>
    <string name="sview_cover_dual_wday_day_month_no_year">E, d MMM</string>
    <string name="clear_cover_wday_day">E</string>
    <string name="clear_cover_month_day_no_year">MMM d</string>
    <string name="clear_cover_day_month_no_year">d MMM</string>
    <string name="china_country_name">china</string>
    <string name="date_time_set">Set</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clearcover_exit_button">Exit</string>
    <string name="clearcover_music_widget_unkown">Unknown</string>
    <string name="clearcover_no_missed_event">You have no missed events</string>
    <string name="clearcover_1_missed_call">You have 1 missed call</string>
    <string name="clearcover_1_unread_message">You have 1 unread message</string>
    <string name="clearcover_n_missed_calls">You have %1$d missed calls</string>
    <string name="clearcover_n_unread_messages">You have %1$d unread messages</string>
    <string name="clearcover_calls_and_messages">You have %1$d missed calls and %2$d unread messages</string>
    <string name="zzz_tts_temp_celsius">Celsius</string>
    <string name="zzz_tts_temp_fahrenheit">Fahrenheit</string>
    <string name="zzz_tts_temperature">Degree</string>
    <string name="volumepanel_ringtone">Ringtone</string>
    <string name="volumepanel_media">Media</string>
    <string name="volumepanel_notification">Notifications</string>
    <string name="volumepanel_system">System</string>
    <string name="s_view_cover_shortcuts_camera_text">Camera</string>
    <string name="s_view_cover_shortcuts_quick_memo_text">Action Memo</string>
    <string name="s_view_cover_shortcuts_music_player_text">Music</string>
    <string name="cmas_presidential_alert">Presidential Alert</string>
    <string name="cmas_extreme_alert">Extreme Alert</string>
    <string name="cmas_severe_alert ">Severe Alert</string>
    <string name="cmas_amber_alert">Amber Alert</string>
    <string name="cmas_presidential_alerts">Presidential alerts</string>
    <string name="cmas_extreme_alerts">Extreme alerts</string>
    <string name="cmas_severe_alerts">Severe alerts</string>
    <string name="cmas_amber_alerts">AMBER alerts</string>
    <string name="cmas_emergency_alerts">Emergency alerts</string>
    <string name="sae_presidential_alert">Presidential alert</string>
    <string name="new_message_title">Messaging</string>
    <string name="message_count">%d new messages</string>
    <string name="new_message">Message</string>
    <string name="cb_msg_header">CB messages</string>
    <string name="push_message_sender">Push message</string>
    <string name="s_view_cover_celsius">℃</string>
    <string name="s_view_cover_fahrenheit">℉</string>
    <string name="s_view_cover_temp_unit">°</string>
    <string name="select_background_color">Set S View window wallpaper</string>
    <string name="cmas_cmas_test_message">Test Alert</string>
    <string name="s_view_window_theme">S View window wallpaper</string>
    <string name="s_view_info_cover">Select items to display</string>
    <string name="s_view_screen_time_out">Screen timeout</string>
    <string name="s_view_screen_roaming">Roaming</string>
    <string name="s_view_screen_home">Home</string>
    <string name="missed_call_title">Missed call</string>
    <string name="missed_calls_count">%d missed calls</string>
    <string name="battery_charging_percent">Charging: %d%%</string>
    <string name="battery_wirelessly_charging_percent">Charging wirelessly - %d%%</string>
    <string name="battery_charged">Charged.</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="unknown_address">Unknown address</string>
    <string name="s_view_cover_startup_title">"It's is your first time to use the S view cover? Please try to set to your liking."</string>
    <string name="s_view_cover_startup_button">Go to Settings</string>
    <string name="s_view_cover_transport_prev_description">Previous</string>
    <string name="s_view_cover_transport_next_description">Next</string>
    <string name="s_view_cover_transport_pause_description">Pause</string>
    <string name="s_view_cover_transport_play_description">Play</string>
    <string name="s_view_cover_transport_stop_description">Stop</string>
    <string name="s_view_cover_transport_volume_description">Volume</string>
    <string name="s_view_cover_transport_playlist_description">Playlists</string>
    <string name="s_view_cover_missed_event_secured_popup">Device locked. Open cover to view more details.</string>
    <string name="s_view_cover_open_cover_popup">Open cover to set wallpaper.</string>
    <string name="s_view_cover_missed_event_button_accessibiliy">Swipe with two fingers to move to missed event page</string>
    <string name="s_view_cover_settings_button_accessibiliy">Swipe with two fingers to go to Settings</string>
    <string name="s_view_cover_camera_button_accessibiliy">Swipe with two fingers to go to Camera</string>
    <string name="s_view_cover_emergency_timer_hrs">hrs</string>
    <string name="s_view_cover_emergency_timer_d">day</string>
    <string name="s_view_cover_emergency_timer_h">h</string>
    <string name="s_view_cover_emergency_timer_m">m</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="s_view_cover_emergency_battery_not_measured">Not measured</string>
    <string name="unsaved">Unsaved</string>
    <string name="clearcover_open_to_view_message">Open cover to view message details.</string>
    <string name="clearcover_open_to_view_call">Open cover to view call details.</string>
    <string name="s_view_cover_shortcuts_settings_text">Settings</string>
    <string name="s_view_stylized_clock_theme">Set style clock</string>
    <string name="s_view_cover_warn_popup_stylized_clock">Wallpapers, Pedometer information, and Weather information cannot be displayed while a style clock is displayed on S View window.</string>
    <string name="ok">OK</string>
    <string name="system_ui_date_pattern">@android:string/system_ui_date_pattern</string>
    <string name="widget_default_package_name" />
    <string name="widget_default_class_name" />
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="clock_12hr_format">hm</string>
    <string name="clock_24hr_format">Hm</string>
    <string name="status_view_wday_month_day_no_year">E, MMMM d</string>
    <string name="status_view_wday_day_month_no_year">E, d MMMM</string>
    <string name="abbrev_wday_abbrev_month_day_no_year">E, MMM d</string>
    <string name="abbrev_wday_day_abbrev_month_no_year">E, d MMM</string>
    <string name="status_view_12_hours_format">h:mm</string>
    <string name="status_view_24_hours_format">kk:mm</string>
    <string name="status_view_ampm_for_12_hours">aa</string>
    <string name="status_view_ampm_for_24_hours" />
    <string name="zzz_lgt_invalid_sim_message" />
    <string name="zzz_skt_usim_not_used" />
    <string name="zzz_kt_usim_not_used" />
    <string name="zzz_lgt_usim_not_used" />
    <string name="zzz_skt_usim_unregistered" />
    <string name="zzz_limited_service" />
    <string name="lockscreen_sim_unlock_progress_dialog_message" />
    <string name="zzz_skt_password_wrong_pin_code1" />
    <string name="zzz_skt_password_wrong_pin_code2" />
    <string name="zzz_skt_lockscreen_puk_password" />
    <string name="zzz_skt_usim_unregistered1" />
    <string name="zzz_skt_usim_unregistered2" />
    <string name="zzz_skt_usim_unregistered3" />
    <string name="zzz_skt_usim_disable_title" />
    <string name="zzz_skt_usim_puk_title" />
    <string name="zzz_skt_empty_pin_title" />
    <string name="zzz_skt_new_pin_title1" />
    <string name="zzz_skt_new_pin_title2" />
    <string name="zzz_skt_verify_pin_title1" />
    <string name="zzz_skt_verify_pin_title2" />
    <string name="zzz_skt_puk_digit_error" />
    <string name="zzz_skt_pin_digit_error" />
    <string name="zzz_skt_invalid_pin_message" />
    <string name="zzz_skt_success_pin_message" />
    <string name="zzz_skt_invalid_puk_message1" />
    <string name="zzz_skt_invalid_puk_message2" />
    <string name="zzz_skt_invalid_puk_message3" />
    <string name="zzz_skt_missing_sim_message" />
    <string name="zzz_skt_missing_sim_message1" />
    <string name="zzz_skt_missing_sim_message2" />
    <string name="zzz_skt_missing_sim_message3" />
    <string name="zzz_skt_unlock_progress_message" />
    <string name="zzz_skt_lockscreen_puk1" />
    <string name="zzz_skt_lockscreen_puk2" />
    <string name="zzz_skt_lockscreen_pin1" />
    <string name="zzz_skt_lockscreen_pin2" />
    <string name="zzz_skt_lockscreen_puk_locked_inst" />
    <string name="zzz_skt_pin_unlock_progress_message" />
    <string name="zzz_domestic_sim_perso_unlock_title1" />
    <string name="zzz_domestic_sim_perso_unlock_title2" />
    <string name="zzz_domestic_sim_perso_unlock_progress_dialog_message" />
    <string name="zzz_domestic_empty_perso_title" />
    <string name="zzz_domestic_perso_digit_error" />
    <string name="zzz_domestic_wrong_perso_password" />
    <string name="zzz_kt_domestic_sim_perso_unlock_title1" />
    <string name="zzz_kt_domestic_sim_perso_unlock_title2" />
    <string name="zzz_kt_domestic_perso_digit_error" />
    <string name="zzz_kt_perso_exceed_max_retry_count" />
    <string name="zzz_kt_password_wrong_pin_code1" />
    <string name="zzz_kt_password_wrong_pin_code2" />
    <string name="zzz_kt_usim_puk_nothing" />
    <string name="zzz_kt_empty_pin_title" />
    <string name="zzz_kt_new_pin_title1" />
    <string name="zzz_kt_new_pin_title2" />
    <string name="zzz_kt_verify_pin_title1" />
    <string name="zzz_kt_verify_pin_title2" />
    <string name="zzz_kt_puk_digit_error" />
    <string name="zzz_kt_pin_digit_error" />
    <string name="zzz_kt_invalid_pin_message" />
    <string name="zzz_kt_success_pin_message" />
    <string name="zzz_kt_invalid_puk_message1" />
    <string name="zzz_kt_invalid_puk_message2" />
    <string name="zzz_kt_lockscreen_puk1" />
    <string name="zzz_kt_lockscreen_puk2" />
    <string name="zzz_kt_lockscreen_pin1" />
    <string name="zzz_kt_lockscreen_pin2" />
    <string name="zzz_kt_lockscreen_puk_locked_inst" />
    <string name="zzz_kt_usim_unsupported" />
    <string name="zzz_lgt_password_wrong_pin_code1" />
    <string name="zzz_lgt_password_wrong_pin_code2" />
    <string name="zzz_lgt_lockscreen_puk_password" />
    <string name="zzz_lgt_usim_disable_title" />
    <string name="zzz_lgt_usim_puk_title" />
    <string name="zzz_lgt_empty_pin_title" />
    <string name="zzz_lgt_new_pin_title1" />
    <string name="zzz_lgt_new_pin_title2" />
    <string name="zzz_lgt_verify_pin_title1" />
    <string name="zzz_lgt_verify_pin_title2" />
    <string name="no">Cancel</string>
    <string name="tw_safe_media_volume_warning">Listening at a high volume for a long time may damage your hearing. Tap OK to allow the volume to be increased above safe levels.</string>
    <string name="qs_torch_popup_title">Torch</string>
    <string name="qs_torch_popup_brightness">Brightness</string>
    <string name="qs_torch_popup_auto_turnoff">Auto turn-off</string>
    <string name="qs_torch_popup_auto_turnoff_none">None</string>
    <string name="qs_torch_popup_auto_turnoff_5min">5 minute</string>
    <string name="qs_torch_popup_auto_turnoff_10min">10 minute</string>
</resources>