<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.sec.SecKeyguardClockSingleView android:orientation="vertical" android:id="@id/keyguard_sec_clock_single_view" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/keyguard_single_clock_container" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="@dimen/kg_singleclock_height" android:layout_marginBottom="5.0dip">
        <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_singleclock_ampm_text_size" android:textColor="@color/theme_textclock_color" android:id="@id/keyguard_single_clock_ampm_kor" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:shadowColor="#cc000000" android:textAllCaps="true" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
        <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_singleclock_time_text_size_normal" android:textColor="@color/theme_textclock_color" android:gravity="bottom" android:id="@id/keyguard_single_clock_time" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#cc000000" android:fontFamily="samsung-neo-num3T" android:format12Hour="@string/status_view_12_hours_format" android:format24Hour="@string/status_view_24_hours_format" style="@style/keyguard_text_shadow" />
        <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_singleclock_ampm_text_size" android:textColor="@color/theme_textclock_color" android:id="@id/keyguard_single_clock_ampm" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:shadowColor="#cc000000" android:textAllCaps="true" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
    </LinearLayout>
    <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_common_date_text_size" android:textColor="@color/theme_clock_date_color" android:id="@id/keyguard_single_clock_date" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#7f000000" android:fontFamily="roboto-regular" android:format12Hour="@string/status_view_wday_day_month_no_year" android:format24Hour="@string/status_view_wday_day_month_no_year" style="@style/keyguard_text_shadow" />
</com.android.keyguard.sec.SecKeyguardClockSingleView>