<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.sec.SecKeyguardProfileView android:orientation="vertical" android:id="@id/keyguard_sec_profile_view" android:layout_width="fill_parent" android:layout_height="170.0dip" android:layout_marginLeft="@dimen/kg_myprofile_margin_left" android:layout_marginTop="@dimen/kg_myprofile_margin_top" android:layout_marginRight="@dimen/kg_myprofile_margin_right"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/kg_myprofile_text_size" android:gravity="center_vertical" android:id="@id/profile_text" android:background="#ffff0000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/kg_myprofile_margin_top" android:shadowColor="#80000000" android:inputType="text" android:paddingStart="20.0dip" style="@style/keyguard_text_shadow" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="20.0dip">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextClock android:textSize="@dimen/kg_widget_common_ampm_text_size" android:id="@id/profile_ampm_kor" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#c0000000" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
            <TextClock android:textSize="@dimen/kg_myprofile_time_text_size" android:id="@id/profile_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#cc000000" android:format12Hour="@string/status_view_12_hours_format" android:format24Hour="@string/status_view_24_hours_format" style="@style/keyguard_text_shadow" />
            <TextClock android:textSize="@dimen/kg_widget_common_ampm_text_size" android:id="@id/profile_ampm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#c0000000" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_common_date_text_size" android:textColor="#ffffffff" android:id="@id/profile_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:shadowColor="#80000000" android:layout_marginEnd="@dimen/kg_widget_common_date_margin_right" android:format12Hour="@string/status_view_wday_day_month_no_year" android:format24Hour="@string/status_view_wday_day_month_no_year" style="@style/keyguard_text_shadow" />
            <TextView android:textSize="@dimen/kg_owner_text_size" android:textColor="@color/keyguard_text_color_white" android:ellipsize="marquee" android:id="@id/keyguard_owner_info" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:shadowColor="#80000000" android:fontFamily="sans-serif" style="@style/keyguard_text_shadow" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="20.0dip">
        <include layout="@layout/sec_adaptive_event_container_small" />
    </LinearLayout>
</com.android.keyguard.sec.SecKeyguardProfileView>