<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/sview_cover_fpopup_title_textsize" android:textColor="#ff000000" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/title" android:background="@color/tw_cover_volume_warning_popup_bg_color_light" android:paddingTop="@dimen/sview_cover_fpopup_padding" android:layout_width="fill_parent" android:layout_height="@dimen/sview_cover_fpopup_title_height" android:layout_marginTop="@dimen/sview_cover_indicator_height" android:text="@android:string/volume_music" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:paddingStart="@dimen/sview_cover_fpopup_padding" android:paddingEnd="@dimen/sview_cover_fpopup_padding" />
    <TextView android:textSize="@dimen/sview_cover_fpopup_body_textsize" android:textColor="#ff000000" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/description" android:background="@color/tw_cover_volume_warning_popup_bg_color_light" android:paddingTop="@dimen/sview_cover_fpopup_padding" android:paddingBottom="@dimen/sview_cover_fpopup_padding" android:layout_width="fill_parent" android:layout_height="@dimen/sview_cover_fpopup_body_height" android:text="@string/tw_safe_media_volume_warning" android:maxLines="6" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:paddingStart="@dimen/sview_cover_fpopup_padding" android:paddingEnd="@dimen/sview_cover_fpopup_padding" />
    <LinearLayout android:gravity="end" android:orientation="horizontal" android:id="@id/buttonbar" android:background="@color/tw_cover_volume_warning_popup_bg_color_light" android:paddingBottom="@dimen/sview_cover_fpopup_buttonbar_paddingBottom" android:layout_width="fill_parent" android:layout_height="@dimen/sview_cover_fpopup_buttonbar_height">
        <Button android:textSize="@dimen/sview_cover_fpopup_button_textsize" android:textColor="#ff0094b0" android:layout_gravity="end" android:id="@id/button1" android:layout_width="@dimen/sview_cover_fpopup_button1_width" android:layout_height="@dimen/sview_cover_fpopup_button_height" android:text="@string/no" android:maxLines="2" style="?android:attr/buttonBarButtonStyle" />
        <TextView android:id="@id/space_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="@dimen/sview_cover_fpopup_buttonbar_between_buttons" />
        <Button android:textSize="@dimen/sview_cover_fpopup_button_textsize" android:textColor="#ff0094b0" android:id="@id/button2" android:layout_width="@dimen/sview_cover_fpopup_button2_width" android:layout_height="@dimen/sview_cover_fpopup_button_height" android:text="@string/ok" android:maxLines="2" style="?android:attr/buttonBarButtonStyle" />
        <TextView android:id="@id/space_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="@dimen/sview_cover_fpopup_padding" />
    </LinearLayout>
</LinearLayout>