<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.sec.SeckeyguardClockSingleImageView android:orientation="vertical" android:id="@id/keyguard_sec_clock_single_image" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/single_clock_time_image_container" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:id="@id/keyguard_single_clock_image_time" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/hour_10th" android:padding="3.0dip" android:layout_width="42.0dip" android:layout_height="60.0dip" android:src="@drawable/clock_digit_4" android:scaleType="fitXY" />
            <ImageView android:id="@id/hour_1th" android:padding="3.0dip" android:layout_width="42.0dip" android:layout_height="60.0dip" android:src="@drawable/clock_digit_0" android:scaleType="fitXY" />
            <ImageView android:id="@id/split_hour_time" android:padding="5.0dip" android:layout_width="16.0dip" android:layout_height="60.0dip" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:src="@drawable/clock_colon" android:scaleType="fitXY" />
            <ImageView android:id="@id/minute_10th" android:padding="3.0dip" android:layout_width="42.0dip" android:layout_height="60.0dip" android:src="@drawable/clock_digit_3" android:scaleType="fitXY" />
            <ImageView android:id="@id/minute_1th" android:padding="3.0dip" android:layout_width="42.0dip" android:layout_height="60.0dip" android:src="@drawable/clock_digit_4" android:scaleType="fitXY" />
        </LinearLayout>
        <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="20.0dip" android:textColor="@color/keyguard_text_color_white" android:gravity="bottom" android:id="@id/keyguard_single_clock_ampm_image" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:src="@drawable/clock_am" android:shadowColor="#cc000000" android:textAllCaps="true" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/single_clock_date_image_container" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_common_date_text_size" android:textColor="@color/keyguard_text_color_white" android:id="@id/keyguard_single_clock_date_image" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#cc000000" android:fontFamily="sans-serif" android:format12Hour="@string/status_view_wday_day_month_no_year" android:format24Hour="@string/status_view_wday_day_month_no_year" style="@style/keyguard_text_shadow" />
    </LinearLayout>
</com.android.keyguard.sec.SeckeyguardClockSingleImageView>