<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.sec.SecKeyguardClockDualView android:orientation="vertical" android:id="@id/keyguard_sec_clock_dual_view" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="171.0dip" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/kg_dualclock_locale_text_size" android:textColor="@color/theme_clock_date_color" android:id="@id/roaming_locale" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/kg_dualclock_roaming_locale_text_margin_left" android:shadowColor="#80000000" android:fontFamily="sans-serif" style="@style/keyguard_text_shadow" />
            <LinearLayout android:gravity="center" android:id="@id/keyguard_dual_roaming_clock_container" android:clickable="true" android:layout_width="wrap_content" android:layout_height="54.0dip">
                <LinearLayout android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_dual_ampm_text_size" android:textColor="@color/theme_textclock_color" android:layout_gravity="bottom" android:id="@id/roaming_ampm_kor" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:shadowColor="#80000000" android:textAllCaps="true" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
                    <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_dualclock_time_text_size" android:textColor="@color/theme_textclock_color" android:layout_gravity="center_vertical" android:id="@id/roaming_time" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:shadowColor="#80000000" android:format12Hour="@string/status_view_12_hours_format" android:format24Hour="@string/status_view_24_hours_format" style="@style/keyguard_text_shadow" />
                    <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_dual_ampm_text_size" android:textColor="@color/theme_textclock_color" android:layout_gravity="bottom" android:id="@id/roaming_ampm" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#80000000" android:textAllCaps="true" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
                </LinearLayout>
            </LinearLayout>
            <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_common_date_text_size" android:textColor="@color/theme_clock_date_color" android:id="@id/roaming_date" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#80000000" android:fontFamily="sans-serif-light" android:format12Hour="@string/status_view_wday_day_month_no_year" android:format24Hour="@string/status_view_wday_day_month_no_year" style="@style/keyguard_text_shadow" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/kg_dualclock_home_locale_text_margin_left">
                <ImageView android:layout_gravity="bottom" android:paddingTop="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/lock_ic_home" />
                <TextView android:textSize="@dimen/kg_dualclock_locale_text_size" android:textColor="@color/theme_clock_date_color" android:id="@id/home_locale" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#80000000" android:fontFamily="sans-serif" style="@style/keyguard_text_shadow" />
            </LinearLayout>
            <LinearLayout android:id="@id/keyguard_dual_home_clock_container" android:clickable="true" android:layout_width="wrap_content" android:layout_height="54.0dip">
                <LinearLayout android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_dual_ampm_text_size" android:textColor="@color/theme_textclock_color" android:layout_gravity="bottom" android:id="@id/home_ampm_kor" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:shadowColor="#80000000" android:textAllCaps="true" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
                    <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_dualclock_time_text_size" android:textColor="@color/theme_textclock_color" android:layout_gravity="center_vertical" android:id="@id/home_time" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:shadowColor="#80000000" android:format12Hour="@string/status_view_12_hours_format" android:format24Hour="@string/status_view_24_hours_format" style="@style/keyguard_text_shadow" />
                    <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_dual_ampm_text_size" android:textColor="@color/theme_textclock_color" android:layout_gravity="bottom" android:id="@id/home_ampm" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#80000000" android:textAllCaps="true" android:format12Hour="@string/status_view_ampm_for_12_hours" android:format24Hour="@string/status_view_ampm_for_24_hours" style="@style/keyguard_text_shadow" />
                </LinearLayout>
            </LinearLayout>
            <com.android.keyguard.sec.SecKeyguardTextClock android:textSize="@dimen/kg_widget_common_date_text_size" android:textColor="@color/theme_clock_date_color" android:id="@id/home_date" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#80000000" android:fontFamily="sans-serif-light" android:format12Hour="@string/status_view_wday_day_month_no_year" android:format24Hour="@string/status_view_wday_day_month_no_year" style="@style/keyguard_text_shadow" />
        </LinearLayout>
    </LinearLayout>
</com.android.keyguard.sec.SecKeyguardClockDualView>